# c3s-eqc-toolbox-template

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bugreport.yml  misc.yml  newfeature.yml  notebook.yml
.github/workflows/: on-push.yml
c3s_eqc_toolbox_template/: __init__.py  download.py  smart_retrieve.py  statistics.py
docs/: conf.py  index.md
environments/: environment_wp3.yml  environment_wp4.yml  environment_wp5.yml
notebooks/: 01-Application_Template_ERA5.ipynb  01-Application_Template_Overview.ipynb  02-Application_Template_Insitu_Gridded.ipynb  A-Reanalysis_single_level.ipynb  Application_Template_ERA5.ipynb  B-Reanalysis_pressure_levels.ipynb  C-In_situ_ungridded.ipynb  D-In_situ_gridded.ipynb
notebooks/Deliverables/: A-Reanalysis_single_level.ipynb  B-Reanalysis_pressure_levels.ipynb  C-In_situ_ungridded.ipynb  D-In_situ_gridded.ipynb  E-Seasonal_forecast_monthly_statistics.ipynb  F-Seasonal_forecast_monthly_anomaly.ipynb
notebooks/ana/: wip.ipynb
notebooks/climate_projections/: 01-Application_Template_Global_Timeseries_Monthly.ipynb  02-Application_Template_Global_Timeseries_Daily.ipynb
notebooks/general_assembly_2023/: mean_climatology_cmip6_t2m.ipynb  trend_cmip6_t2m.ipynb
notebooks/in_situ/: 01-Application_Template_Global_Timeseries_Ungridded.ipynb  02-Application_Template_Global_Timeseries_Gridded.ipynb
notebooks/renalysis/: 01-Application_Template_Global_Timeseries_Single_Level.ipynb  02-Application_Template_Global_Timeseries_Pressure_Levels.ipynb
notebooks/satellite/: 01-Application_Template_Global_Timeseries.ipynb  01-Application_Template_Global_Timeseries_Monthly.ipynb  02-Application_Template_Global_Timeseries_Daily.ipynb  C3S2_D520.5.3.2_Quality_Assessment_User_Questions_LULC_UQ1_v1.ipynb
notebooks/seasonal_forecast/: 01-Application_Template_Global_Timeseries_Statistics.ipynb  02-Application_Template_Global_Timeseries_Anomalies.ipynb
notebooks/wp3/: WIP-hit_rate.ipynb  bias_assessment.ipynb  hit_rate.ipynb  scale_awareness.ipynb  seasonal_forecast_vs_oras5.ipynb  uncertainty_densityplot.ipynb
notebooks/wp4/: WIP-extreme_temperature_indices.ipynb  WIP-maps.ipynb  WIP_trend_pr_cordex_cmip6.ipynb  clima_and_bias_cordex_cmip6_regionalised.ipynb  clima_and_bias_pr_cmip6_regionalised.ipynb  clima_and_bias_pr_cordex_cmip6_regionalised.ipynb  clima_t2m.ipynb  cmip6_energy_indices.ipynb  cmip6_energy_indices_future.ipynb  cmip6_energy_indices_historical_vs_future.ipynb  cmip6_sea_ice_concentration_maps.ipynb  cmip6_sea_ice_diagnostics.ipynb  cmip6_sea_ice_evaluation.ipynb  cmip6_sea_ice_thickness_bias_maps.ipynb  cmip6_sea_ice_thickness_evaluation.ipynb  extreme_indices.ipynb  wip.ipynb  (+9 more)
scripts/: check_jupyter_logs.sh  create_all_envs.sh  create_env.sh  create_environments.sh  issues_stats.py  jupyter_server.py  notebook_stats.py  populate_wp3_cache.py  populate_wp5_cache.py  update_environment.sh
tests/: test_00_version.py  test_10_download.py
(+92 files in other folders)
