[metadata]
name = c3s-eqc-toolbox-template
license = Apache License 2.0
description = CADS Toolbox template application
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    cacholote
    cdsapi
    fsspec
    emohawk
    cads-toolbox

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = True
